code/python/grammar/SCCPParser.py
# Generated from python/grammar/SCCP.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SCCPParser ( Parser ):

    grammarFileName = "SCCP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'Int'", "'Bool'", "'begin'", 
                     "'end'", "'.'", "'tell'", "'('", "')'", "'ask'", "'<'", 
                     "'>'", "'->'", "'||'", "'['", "']_'", "'and'", "'='", 
                     "'=/='", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOL", "INT", "ID", "WS" ]

    RULE_sys = 0
    RULE_decl = 1
    RULE_vint = 2
    RULE_vbool = 3
    RULE_body = 4
    RULE_line = 5
    RULE_proc = 6
    RULE_const = 7
    RULE_loc = 8
    RULE_expr = 9
    RULE_op = 10

    ruleNames =  [ "sys", "decl", "vint", "vbool", "body", "line", "proc", 
                   "const", "loc", "expr", "op" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    BOOL=22
    INT=23
    ID=24
    WS=25

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SysContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(SCCPParser.BodyContext,0)


        def decl(self):
            return self.getTypedRuleContext(SCCPParser.DeclContext,0)


        def getRuleIndex(self):
            return SCCPParser.RULE_sys

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSys" ):
                listener.enterSys(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSys" ):
                listener.exitSys(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSys" ):
                return visitor.visitSys(self)
            else:
                return visitor.visitChildren(self)




    def sys(self):

        localctx = SCCPParser.SysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sys)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            _la = self._input.LA(1)
            if _la==SCCPParser.T__0:
                self.state = 22
                self.decl()


            self.state = 25
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCCPParser.VintContext)
            else:
                return self.getTypedRuleContext(SCCPParser.VintContext,i)


        def vbool(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCCPParser.VboolContext)
            else:
                return self.getTypedRuleContext(SCCPParser.VboolContext,i)


        def getRuleIndex(self):
            return SCCPParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = SCCPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 29
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 27
                    self.vint()
                    pass

                elif la_ == 2:
                    self.state = 28
                    self.vbool()
                    pass


                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SCCPParser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SCCPParser.ID)
            else:
                return self.getToken(SCCPParser.ID, i)

        def getRuleIndex(self):
            return SCCPParser.RULE_vint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVint" ):
                listener.enterVint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVint" ):
                listener.exitVint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVint" ):
                return visitor.visitVint(self)
            else:
                return visitor.visitChildren(self)




    def vint(self):

        localctx = SCCPParser.VintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(SCCPParser.T__0)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.match(SCCPParser.ID)
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SCCPParser.ID):
                    break

            self.state = 39
            self.match(SCCPParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VboolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SCCPParser.ID)
            else:
                return self.getToken(SCCPParser.ID, i)

        def getRuleIndex(self):
            return SCCPParser.RULE_vbool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVbool" ):
                listener.enterVbool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVbool" ):
                listener.exitVbool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVbool" ):
                return visitor.visitVbool(self)
            else:
                return visitor.visitChildren(self)




    def vbool(self):

        localctx = SCCPParser.VboolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vbool)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(SCCPParser.T__0)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.match(SCCPParser.ID)
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SCCPParser.ID):
                    break

            self.state = 47
            self.match(SCCPParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCCPParser.LineContext)
            else:
                return self.getTypedRuleContext(SCCPParser.LineContext,i)


        def getRuleIndex(self):
            return SCCPParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = SCCPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(SCCPParser.T__3)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.line()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SCCPParser.T__6) | (1 << SCCPParser.T__9) | (1 << SCCPParser.T__14))) != 0)):
                    break

            self.state = 55
            self.match(SCCPParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proc(self):
            return self.getTypedRuleContext(SCCPParser.ProcContext,0)


        def getRuleIndex(self):
            return SCCPParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = SCCPParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.proc(0)
            self.state = 58
            self.match(SCCPParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SCCPParser.RULE_proc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParallelContext(ProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ProcContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def proc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCCPParser.ProcContext)
            else:
                return self.getTypedRuleContext(SCCPParser.ProcContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParallel" ):
                listener.enterParallel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParallel" ):
                listener.exitParallel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParallel" ):
                return visitor.visitParallel(self)
            else:
                return visitor.visitChildren(self)


    class TellContext(ProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ProcContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def const(self):
            return self.getTypedRuleContext(SCCPParser.ConstContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTell" ):
                listener.enterTell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTell" ):
                listener.exitTell(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTell" ):
                return visitor.visitTell(self)
            else:
                return visitor.visitChildren(self)


    class ProclocContext(ProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ProcContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def proc(self):
            return self.getTypedRuleContext(SCCPParser.ProcContext,0)

        def INT(self):
            return self.getToken(SCCPParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcloc" ):
                listener.enterProcloc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcloc" ):
                listener.exitProcloc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcloc" ):
                return visitor.visitProcloc(self)
            else:
                return visitor.visitChildren(self)


    class AskContext(ProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ProcContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def const(self):
            return self.getTypedRuleContext(SCCPParser.ConstContext,0)

        def proc(self):
            return self.getTypedRuleContext(SCCPParser.ProcContext,0)

        def loc(self):
            return self.getTypedRuleContext(SCCPParser.LocContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsk" ):
                listener.enterAsk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsk" ):
                listener.exitAsk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsk" ):
                return visitor.visitAsk(self)
            else:
                return visitor.visitChildren(self)



    def proc(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SCCPParser.ProcContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_proc, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            token = self._input.LA(1)
            if token in [SCCPParser.T__6]:
                localctx = SCCPParser.TellContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 61
                self.match(SCCPParser.T__6)
                self.state = 62
                self.match(SCCPParser.T__7)
                self.state = 63
                self.const(0)
                self.state = 64
                self.match(SCCPParser.T__8)

            elif token in [SCCPParser.T__9]:
                localctx = SCCPParser.AskContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 66
                self.match(SCCPParser.T__9)
                self.state = 71
                _la = self._input.LA(1)
                if _la==SCCPParser.T__10:
                    self.state = 67
                    self.match(SCCPParser.T__10)
                    self.state = 68
                    self.loc()
                    self.state = 69
                    self.match(SCCPParser.T__11)


                self.state = 73
                self.const(0)
                self.state = 74
                self.match(SCCPParser.T__12)
                self.state = 80
                token = self._input.LA(1)
                if token in [SCCPParser.T__7]:
                    self.state = 75
                    self.match(SCCPParser.T__7)
                    self.state = 76
                    self.proc(0)
                    self.state = 77
                    self.match(SCCPParser.T__8)

                elif token in [SCCPParser.T__6, SCCPParser.T__9, SCCPParser.T__14]:
                    self.state = 79
                    self.proc(0)

                else:
                    raise NoViableAltException(self)


            elif token in [SCCPParser.T__14]:
                localctx = SCCPParser.ProclocContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 82
                self.match(SCCPParser.T__14)
                self.state = 83
                self.proc(0)
                self.state = 84
                self.match(SCCPParser.T__15)
                self.state = 85
                self.match(SCCPParser.INT)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SCCPParser.ParallelContext(self, SCCPParser.ProcContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_proc)
                    self.state = 89
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 90
                    self.match(SCCPParser.T__13)
                    self.state = 91
                    self.proc(3) 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SCCPParser.RULE_const

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BoolContext(ConstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ConstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(SCCPParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ConstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ConstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def const(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCCPParser.ConstContext)
            else:
                return self.getTypedRuleContext(SCCPParser.ConstContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class CexprContext(ConstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ConstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SCCPParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCexpr" ):
                listener.enterCexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCexpr" ):
                listener.exitCexpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCexpr" ):
                return visitor.visitCexpr(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ConstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SCCPParser.ConstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SCCPParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)



    def const(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SCCPParser.ConstContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_const, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = SCCPParser.BoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 98
                self.match(SCCPParser.BOOL)
                pass

            elif la_ == 2:
                localctx = SCCPParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 99
                self.match(SCCPParser.ID)
                pass

            elif la_ == 3:
                localctx = SCCPParser.CexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 100
                self.expr()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SCCPParser.AndContext(self, SCCPParser.ConstContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_const)
                    self.state = 103
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 104
                    self.match(SCCPParser.T__16)
                    self.state = 105
                    self.const(2) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class LocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(SCCPParser.INT)
            else:
                return self.getToken(SCCPParser.INT, i)

        def getRuleIndex(self):
            return SCCPParser.RULE_loc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoc" ):
                listener.enterLoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoc" ):
                listener.exitLoc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoc" ):
                return visitor.visitLoc(self)
            else:
                return visitor.visitChildren(self)




    def loc(self):

        localctx = SCCPParser.LocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_loc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(SCCPParser.INT)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SCCPParser.T__5:
                self.state = 112
                self.match(SCCPParser.T__5)
                self.state = 113
                self.match(SCCPParser.INT)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SCCPParser.ID)
            else:
                return self.getToken(SCCPParser.ID, i)

        def op(self):
            return self.getTypedRuleContext(SCCPParser.OpContext,0)


        def INT(self):
            return self.getToken(SCCPParser.INT, 0)

        def getRuleIndex(self):
            return SCCPParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SCCPParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SCCPParser.ID)
            self.state = 120
            self.op()
            self.state = 121
            _la = self._input.LA(1)
            if not(_la==SCCPParser.INT or _la==SCCPParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SCCPParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = SCCPParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SCCPParser.T__10) | (1 << SCCPParser.T__11) | (1 << SCCPParser.T__17) | (1 << SCCPParser.T__18) | (1 << SCCPParser.T__19) | (1 << SCCPParser.T__20))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.proc_sempred
        self._predicates[7] = self.const_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def proc_sempred(self, localctx:ProcContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def const_sempred(self, localctx:ConstContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         




